Restructure unit tests into traditional structure